@@ -27,7 +27,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#11 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/audit_submit.3#12 $
 .\"
 .Dd May 29, 2006
 .Dt audit_submit 3
@@ -54,7 +54,7 @@ The header will contain the event class specified by
 .Fa au_event .
 The subject token will be generated based on
 .Fa au_ctx .
-The return token is dependant on the
+The return token is dependent on the
 .Fa status
 and
 .Fa reterr
